feature. add cluster
