# internal/biz/clusters_models.go
@@ -1,0 +1,20 @@
+package biz
+
+
+
+type Cluster struct {
+	Id int64
+	Name string
+	Description string 
+}
+
+type ClusterFilter struct {
+	Name string 
+}
+
+type ListClustersFilter struct {
+	Page int64
+	PageSize int64
+	Filters  []ClusterFilter 
+}
+
